***********************************
CHANGES IN VERSION 2.5.2

BUG FIXES

   o Bug fixed when HiC-Pro is run with relative path

   o Bug fixed in mergeSAM.py in case of duplicated reference in the SAM header

   o Check PREFIX installation variable during installation process

***********************************
CHANGES IN VERSION 2.5.1

SIGNIFICANT USER-VISIBLE CHANGES

   o samtools 0.1.19 or higher is required

   o Any character after "\" in read names are now discarded so that myread\1 == myread\2

   o Warning is printed during the restriction fragment assignment is a chromosome is not defined in the annotation file

BUG FIXES

   o Add pyton path in ice_norm.sh

   o Bug fixed in iced genomic intervals symlink

   o Add missing ${PYTHON_PATH} variable in scripts

   o Add pysam check during installation

   o Bug in install process

   o Bug in python PATH

***********************************
CHANGES IN VERSION 2.5.0

SIGNIFICANT USER-VISIBLE CHANGES

   o MergeSAM.pl is now in python based on pysam library

   o All SAM outputs are converted into BAM files

   o Check dependencies version number during installation

***********************************
CHANGES IN VERSION 2.4.2

NEW FEATURES

   o Add HiC-Pro utilities - split_reads

***********************************
CHANGES IN VERSION 2.4.1

SIGNIFICANT USER-VISIBLE CHANGES
   
   o Add PREFIX variable in installation configuration to set the installation directory

   o Improve logs reporting and organization

   o Remove SAM files by default when running the complete workflow

BUG FIXES

   o Bug fixed in rmdup

***********************************
CHANGES IN VERSION 2.4.0

BUG FIXES

   o Bug fixed if input path is not absolute

NEW FEATURES

   o Support both short and long options

SIGNIFICANT USER-VISIBLE CHANGES

   o ORGANISM option in config file replaced by REFERENCE_GENOME
   
   o CUT_SITE_5OVER option in config file replaced by LIGATION_SITE
