@@ -32,12 +32,13 @@ ifndef PREFIX
 PREFIX = /local/bin/
 endif
 
+
 ######################################
 ## Dependencies
 ##
 ######################################
 checkdep: config_check
-	./scripts/install/install_dependencies.sh -c $(CONFIG_SYS) -o $(realpath $(PREFIX))/HiC-Pro_$(VNUM)
+	./scripts/install/install_dependencies.sh -c $(CONFIG_SYS) -o  $(realpath $(PREFIX))/HiC-Pro_$(VNUM)
 
 ######################################
 ## Compile
