@@ -12,6 +12,7 @@ VERSION="2.5.2"
 
 function usage {
     echo -e "usage : $SOFT -i INPUT -o OUTPUT -c CONFIG [-p] [-s ANALYSIS_STEP] [-h]"
+    echo -e "$0 --help for detailed usage"
 }
 
 function help {
@@ -158,7 +159,7 @@ fi
 ###################
 echo
 if [ $PBS == 0 ]; then
-    echo "Run HiC-Pro"
+    echo "Run HiC-Pro_"$VERSION
     make --file $SCRIPTS_PATH/Makefile CONFIG_FILE=$CONF CONFIG_SYS=$INSTALL_PATH"/config-system.txt" init 2>&1
     make --file $SCRIPTS_PATH/Makefile CONFIG_FILE=$CONF CONFIG_SYS=$INSTALL_PATH"/config-system.txt" $MAKE_OPTS 2>&1
 else
