@@ -45,11 +45,9 @@ do
     mkdir -p ${LDIR}
 
     cmd="${PYTHON_PATH}/python ${SCRIPTS}/mapped_2hic_fragments.py ${opts} -f ${GENOME_FRAGMENT_FILE} -r ${r} -o ${datadir}"
-    echo $cmd
     exec_cmd $cmd > ${LDIR}/mapped_2hic_fragments.log 2>&1
 
     ## Valid pairs are already sorted
-    echo ${r}
     outVALID=`basename ${r} | sed -e 's/.bam$/.validPairs/'`
     outSAM=`basename ${r} | sed -e 's/.bam$/_interaction.sam/'`
     sortBAM=`basename ${r} | sed -e 's/.bam$/_interaction/'`
@@ -57,14 +55,17 @@ do
     echo "## Sorting valid interaction file ..." >> ${LDIR}/mapped_2hic_fragments.log 2>&1
     sort -k2,2V -k3,3n -k5,5V -k6,6n -T ${TMP_DIR} -o ${datadir}/${outVALID} ${datadir}/${outVALID} 
 
-    echo "## Creating BAM and index files ..." >> ${LDIR}/mapped_2hic_fragments.log 2>&1
-    if [ -f ${datadir}/${outSAM} ]
-    then 
-	cmd="${SAMTOOLS_PATH}/samtools view -bS ${datadir}/${outSAM} | ${SAMTOOLS_PATH}/samtools sort - ${datadir}/${sortBAM}"
-	echo $cmd
-	exec_cmd $cmd
-	cmd="${SAMTOOLS_PATH}/samtools index ${datadir}/${sortBAM}.bam"
-	exec_cmd $cmd
-    fi
+    # echo "## Creating BAM and index files ..." >> ${LDIR}/mapped_2hic_fragments.log 2>&1
+    # if [ -f ${datadir}/${outSAM} ]
+    # then 
+    # 	cmd="${SAMTOOLS_PATH}/samtools view -bS ${datadir}/${outSAM} | ${SAMTOOLS_PATH}/samtools sort - ${datadir}/${sortBAM}"
+    # 	exec_cmd $cmd
+    # 	cmd="${SAMTOOLS_PATH}/samtools index ${datadir}/${sortBAM}.bam"
+    # 	exec_cmd $cmd
+    # fi
 done
-echo "## done !"
+
+## Make plots
+${SCRIPTS}/make_plots.sh -c ${conf_file} -p "filtering" >> ${LOGFILE}
+
+
